# Ros2-Xacro-Custom-Robot-With-Sensors

./: readme.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/camera_driver/lib/camera_driver/: camera_subscriber
install/camera_driver/share/camera_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/camera_driver/share/camera_driver/cmake/: camera_driverConfig-version.cmake  camera_driverConfig.cmake
install/camera_driver/share/camera_driver/environment/: ament_prefix_path.dsv  path.dsv
install/custom_robot_bringup/share/custom_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/custom_robot_bringup/share/custom_robot_bringup/cmake/: custom_robot_bringupConfig-version.cmake  custom_robot_bringupConfig.cmake
install/custom_robot_description/share/custom_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/camera_driver/: CMakeLists.txt
src/camera_driver/src/: camera_subscriber.cpp
src/custom_robot_bringup/: CMakeLists.txt  package.xml
src/custom_robot_bringup/launch/: custom_robot_gazebo.launch.xml
src/custom_robot_description/: CMakeLists.txt
src/custom_robot_description/launch/: display.launch.xml
src/custom_robot_description/urdf/: camera.xacro  common_properties.xacro  lidar.xacro
src/lidar_driver/: CMakeLists.txt  package.xml
src/lidar_driver/src/: lidar_subscriber.cpp
(+24 files in other folders)
